# HCLC-GDPR-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  actions.py  config.yml  credentials.yml  datenauskunft.txt  datenloeschantrag.txt  docker-compose.yml  domain.yml  einwilligungswiderruf.txt  graph.html  requirements-prod.txt  requirements.txt  werbewiderspruch.txt
data/: nlu.md  responses.md  stories.md
demo/: cloud-init-web-server.txt  index.html  index.min.js
results/: intent_report.json
search/: Cargo.toml
search/src/: lib.rs  schema.json
search/test/: test.py
